--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+// 1. Import the initial variables
+@import "~bulma/sass/utilities/initial-variables";
+
+// 2. Set your own initial variables
+// Update blue
+$blue: #007aff;
+  // Add pink and its invert
+//$pink: #ffb3b3;
+//$pink-invert: #fff;
+//  // Add a serif family
+//$family-serif: "Merriweather", "Georgia", serif;
+//
+//  // 3. Set the derived variables
+  // Use the new pink as the primary color
+$primary: $blue;
+//$primary-invert: $pink-invert;
+//  // Use the existing orange as the danger color
+//$danger: $orange;
+//  // Use the new serif family
+//$family-primary: $family-serif;
+
+
+@import "~bulma";
