--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -116,6 +116,19 @@
       </div>
     </div>
 
+    <div class="container">
+
+      <div class="section">
+
+        <app-snippet
+          [config]="exampleConfig"
+          [snippet]="exampleSnippet"
+        ></app-snippet>
+
+      </div>
+
+    </div>
+
   </div>
   <footer class="footer">
     <div class="container">
@@ -125,11 +138,7 @@
           <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
           is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC ANS 4.0</a>.
         </p>
-        <p>
-          <a class="icon" href="https://github.com/jgthms/bulma">
-            <i class="fa fa-github"></i>
-          </a>
-        </p>
+
       </div>
     </div>
   </footer>
