--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -118,7 +118,7 @@
 
     <div class="container">
 
-      <div class="section">
+      <div class="section" style="padding: 25px 0">
 
         <app-snippet
           [config]="exampleConfig"
