--- a/src/app/core/components/snippet/snippet.component.html
+++ b/src/app/core/components/snippet/snippet.component.html
@@ -2,7 +2,7 @@
 <div class="card ">
   <div class="card-header">
     <div class="card-header-title">
-      {{snippet.filename}}
+      {{snippet.name}}
     </div>
 
   </div>
