--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,146 +1,105 @@
-<div id="home">
 
-  <section class="hero is-primary  ">
-    <div class="hero-head">
-      <header class="nav">
-        <div class="container">
-          <div class="nav-left">
-            <a class="nav-item" routerLink="/">
-              <img src="/assets/images/logo.png" alt="nub.io">
-            </a>
-          </div>
-          <span class="nav-toggle">
-            <span></span>
-            <span></span>
-            <span></span>
-          </span>
-          <div class="nav-right nav-menu">
-            <a class="nav-item is-active">
-              Home
-            </a>
-            <a class="nav-item">
-              Examples
-            </a>
-            <a class="nav-item">
-              Documentation
-            </a>
-            <span class="nav-item">
-              <a class="button is-info is-outlined is-inverted">
-                <span class="icon">
-                  <i class="fa fa-user-circle-o"></i>
-                </span>
-                <span>Login</span>
-              </a>
-            </span>
-          </div>
-        </div>
-      </header>
-    </div>
-    <div class="hero-body">
-      <div class="container has-text-centered">
-        <h1 class="title is-2">
-          nub.io
-        </h1>
-        <h2 class="subtitle is-5">
-          Quick and easy to share code snippets
-        </h2>
-        <p>
-          <a (click)="createSnippet()" class="button is-outlined">
-            <span class="icon">
-              <i class="fa fa-pencil-square-o"></i>
-            </span>
-            <span>
-              Create a snippet
-            </span>
-          </a>
-        </p>
-      </div>
-    </div>
-  </section>
-  <div class="hero-cta">
-    <nav class="level">
-      <div class="level-item has-text-centered">
-        <p class="title">Features</p>
-      </div>
-    </nav>
+
+<section class="hero is-primary  ">
+  <div class="hero-head">
+    <app-header></app-header>
   </div>
-  <div class="section main">
-    <div class="container">
-      <div class="columns">
-        <div class="column is-4">
-          <div class="panel">
-            <div class="panel-block section">
-              <div class="container">
-
-                <p class="has-text-centered"><i class="fa fa-camera-retro icon-block"></i></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.</p>
-
-                <p class="has-text-centered"><a class="button is-info is-outlined">Action</a></p>
-              </div>
-
-            </div>
-          </div>
-        </div>
-        <div class="column is-4">
-          <div class="panel">
-            <div class="panel-block section">
-
-              <div class="container">
-                <p class="has-text-centered"><i class="fa fa-bar-chart icon-block"></i></p>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.</p>
-
-                <p class="has-text-centered"><a class="button is-info is-outlined">Action</a></p>
-              </div>
-
-            </div>
-          </div>
-
-        </div>
-        <div class="column is-4">
-          <div class="panel">
-            <div class="panel-block section">
-
-              <div class="container">
-                <p class="has-text-centered"><i class="fa fa-cloud icon-block"></i></p>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.</p>
-
-                <p class="has-text-centered"><a class="button is-info is-outlined">Action</a></p>
-              </div>
-
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-
-      <div *ngFor="let s of snippets$ | async" class="section" style="padding: 25px 0">
-
-        <app-snippet
-          [config]="exampleConfig"
-          [snippet]="s"
-        ></app-snippet>
-
-      </div>
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <h1 class="title is-2">
+        nub.io
+      </h1>
+      <h2 class="subtitle is-5">
+        Quick and easy to share code snippets
+      </h2>
 
     </div>
-
   </div>
-  <footer class="footer">
-    <div class="container">
-      <div class="content has-text-centered">
-        <p>
-          <strong>nub.io</strong> copyright 2017. The source code is licensed
-          <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-          is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC ANS 4.0</a>.
-        </p>
-
-      </div>
+</section>
+<div class="hero-cta">
+  <nav class="level">
+    <div class="level-item has-text-centered">
+      <p class="title">Features</p>
     </div>
-  </footer>
+  </nav>
 </div>
+<div class="section main">
+  <div class="container">
+    <div class="columns">
+      <div class="column is-4">
+        <div class="panel">
+          <div class="panel-block section">
+            <div class="container">
+
+              <p class="has-text-centered"><i class="fa fa-camera-retro icon-block"></i></p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.</p>
+
+              <p class="has-text-centered"><a class="button is-info is-outlined">Action</a></p>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <div class="column is-4">
+        <div class="panel">
+          <div class="panel-block section">
+
+            <div class="container">
+              <p class="has-text-centered"><i class="fa fa-bar-chart icon-block"></i></p>
+
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.</p>
+
+              <p class="has-text-centered"><a class="button is-info is-outlined">Action</a></p>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+      <div class="column is-4">
+        <div class="panel">
+          <div class="panel-block section">
+
+            <div class="container">
+              <p class="has-text-centered"><i class="fa fa-cloud icon-block"></i></p>
+
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.</p>
+
+              <p class="has-text-centered"><a class="button is-info is-outlined">Action</a></p>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+
+    <div *ngFor="let s of snippets$ | async" class="section" style="padding: 25px 0">
+
+      <app-snippet
+        [config]="exampleConfig"
+        [snippet]="s"
+      ></app-snippet>
+
+    </div>
+
+  </div>
+
+</div>
+<footer class="footer">
+  <div class="container">
+    <div class="content has-text-centered">
+      <p>
+        <strong>nub.io</strong> copyright 2017. The source code is licensed
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC ANS 4.0</a>.
+      </p>
+
+    </div>
+  </div>
+</footer>
+
 
