feat: add nub routers

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,62 +1,17 @@
-<div id="home">
+<section class="container " >
 
-  <section class="hero is-primary  ">
-    <div class="hero-head">
-      <header class="nav">
-        <div class="container">
-          <div class="nav-left">
-            <a class="nav-item" routerLink="/">
-              <img src="/assets/images/logo.png" alt="nub.io">
-            </a>
-          </div>
-          <span class="nav-toggle">
-            <span></span>
-            <span></span>
-            <span></span>
-          </span>
-          <div class="nav-right nav-menu">
-            <a class="nav-item is-active">
-              Home
-            </a>
-            <a class="nav-item">
-              Examples
-            </a>
-            <a class="nav-item">
-              Documentation
-            </a>
-            <span class="nav-item">
-              <a class="button is-info is-outlined is-inverted">
-                <span class="icon">
-                  <i class="fa fa-user-circle-o"></i>
-                </span>
-                <span>Login</span>
-              </a>
-            </span>
-          </div>
-        </div>
-      </header>
+  <div class="hero-body ">
+    <div class="container has-text-centered">
+      <h1 class="title">
+        The new standard in &lt;insert industry here&gt;
+      </h1>
+      <h2 class="subtitle">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </h2>
     </div>
-    <div class="hero-body">
-      <div class="container has-text-centered">
-        <h1 class="title is-2">
-          nub.io
-        </h1>
-        <h2 class="subtitle is-5">
-          Quick and easy to share code snippets
-        </h2>
-        <p>
-          <a (click)="createSnippet()" class="button is-outlined">
-            <span class="icon">
-              <i class="fa fa-pencil-square-o"></i>
-            </span>
-            <span>
-              Create a snippet
-            </span>
-          </a>
-        </p>
-      </div>
-    </div>
-  </section>
+  </div>
+
+
   <div class="hero-cta">
     <nav class="level">
       <div class="level-item has-text-centered">
@@ -130,17 +85,7 @@
     </div>
 
   </div>
-  <footer class="footer">
-    <div class="container">
-      <div class="content has-text-centered">
-        <p>
-          <strong>nub.io</strong> copyright 2017. The source code is licensed
-          <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-          is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC ANS 4.0</a>.
-        </p>
 
-      </div>
-    </div>
-  </footer>
-</div>
 
+
+</section>
