feat: added service worker

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -14,12 +14,12 @@
       <a routerLink="/" class="nav-item is-active">
         Home
       </a>
-      <!--<a class="nav-item">-->
-        <!--Examples-->
-      <!--</a>-->
-      <!--<a class="nav-item">-->
-        <!--Documentation-->
-      <!--</a>-->
+      <a class="nav-item">
+        Examples
+      </a>
+      <a class="nav-item">
+        Documentation
+      </a>
       <span class="nav-item">
               <a [routerLink]="['/snippets', 'new']" class="button is-info is-outlined is-inverted">
                 <span class="icon">
