--- a/src/app/views/snippets/snippet-create/snippet-create.component.html
+++ b/src/app/views/snippets/snippet-create/snippet-create.component.html
@@ -1,3 +1,3 @@
 <h1 class="title">New snippet</h1>
 
-<app-snippet-form></app-snippet-form>
+<app-snippet-form (onSubmit)="onCreate($event)"></app-snippet-form>
